Fixed ordered list layout issues

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -96,15 +96,15 @@ ul{
 }
 
 ol{
-	margin-left:15px;
+	margin-left:35px;
 	counter-reset: li;
 	>li{
 		&:before{
 			counter-increment: li;
 			content:counter(li)+". ";
 			color:@brandred;
-			font-size:80%;
-			margin-left:-11px;
+			font-size:100%;
+			margin-left:-30px;
 			position:absolute;
 			font-weight:500;
 		}
